--- a/part4/package.json
+++ b/part4/package.json
@@ -4,7 +4,9 @@
   "description": "A blogging website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\"Echo: no test specified\\\" && exit 1"
+    "test": "echo \\\"Echo: no test specified\\\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,14 @@
   "bugs": {
     "url": "https://github.com/QwadwoNyamekye/fullstack_backend/issues"
   },
-  "homepage": "https://github.com/QwadwoNyamekye/fullstack_backend#readme"
+  "homepage": "https://github.com/QwadwoNyamekye/fullstack_backend#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
