--- a/part4/package.json
+++ b/part4/package.json
@@ -4,7 +4,7 @@
   "description": "A blogging website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\"Echo: no test specified\\\" && exit 1",
+    "test": "node --test",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
@@ -25,7 +25,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.4"
+    "mongoose": "^8.9.4",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
