--- a/practice_nodejs_notes/package.json
+++ b/practice_nodejs_notes/package.json
@@ -1,44 +1,27 @@
 {
-  "name": "backend",
-  "version": "0.0.1",
+  "name": "notebackend",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon --env-file=.env index.js",
-    "deploy": "fly deploy",
-    "logs:prod": "fly logs",
-    "test": "echo \"Echo: no test specified\" && exit 1",
-    "build:ui": "@powershell Remove-Item -Recurse -Force ./dist && cd ../../fullstack_frontend/practice_react_notes && npm run build && @powershell Copy-Item ./dist -Recurse ../../fullstack_backend/practice_nodejs_notes",
-    "deploy:full": "npm run build:ui && npm run deploy",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test",
     "lint": "eslint ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/QwadwoNyamekye/fullstackopen.git"
-  },
-  "keywords": [
-    "nodejs",
-    "backend"
-  ],
-  "author": "Qwadwo Nyamekye",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/QwadwoNyamekye/fullstackopen/issues"
-  },
-  "homepage": "https://github.com/QwadwoNyamekye/fullstackopen#readme",
-  "description": "",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.1",
-    "mongoose": "^8.8.3"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.16.0",
-    "@flydotio/dockerfile": "^0.5.9",
-    "@stylistic/eslint-plugin-js": "^2.12.1",
-    "eslint": "^9.16.0",
-    "globals": "^15.13.0",
-    "nodemon": "^3.1.7"
+    "@flydotio/dockerfile": "^0.5.0",
+    "@stylistic/eslint-plugin-js": "^1.6.1",
+    "eslint": "^8.56.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   }
 }
